--- a/css/styles.css
+++ b/css/styles.css
@@ -883,6 +883,7 @@ a {
   background-color: #fcb72b;
   border: none;
   cursor: pointer;
+  transition: all 0.3s ease;
 }
 .benefist__btn:hover {
   box-shadow: 0 0 5px 0 #fcb72b;
