--- a/scss/_bloks/_benefist.scss
+++ b/scss/_bloks/_benefist.scss
@@ -36,6 +36,7 @@
     background-color: #fcb72b;
     border: none;
     cursor: pointer;
+    transition: all 0.3s ease;
   }
   &__btn:hover {
     box-shadow: 0 0 5px 0 $yellow;
