--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,14 @@ a {
   font-weight: 700;
   src: url("../fonts/space-mono-v12-latin-700.woff2") format("woff2"), url("../fonts/space-mono-v12-latin-700.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+/* lexend-deca-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/lexend-deca-v17-latin-regular.woff2") format("woff2"), url("../fonts/lexend-deca-v17-latin-regular.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
 .container {
   max-width: 1440px;
   padding: 0 165px;
@@ -1296,4 +1304,305 @@ a {
     flex-direction: column;
     align-items: center;
   }
+}
+.intro__about__container {
+  padding-top: 72px;
+  padding-bottom: 71px;
+  background-image: url(.././img/about_intro.png);
+  background-repeat: no-repeat;
+  background-position: top;
+}
+.intro__about__title {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: #ffffff;
+}
+
+.benefist__about {
+  padding-top: 120px;
+}
+.benefist__about__box {
+  background-image: url(.././img/about_pointer1.svg);
+  background-repeat: no-repeat;
+  background-position: calc(50% + 350px) bottom;
+}
+.benefist__about__box--two {
+  background-image: url(.././img/benefist_bgi.png);
+  background-repeat: no-repeat;
+  background-position: calc(50% + 850px) center;
+}
+.benefist__about__box--three {
+  background-image: url(.././img/benefist_pointer2.svg);
+  background-repeat: no-repeat;
+  background-position: calc(50% - 750px) top;
+}
+.benefist__about__box--four {
+  background-image: url(.././img/benefist_bgi.png);
+  background-repeat: no-repeat;
+  background-position: calc(50% - 850px) center;
+}
+.benefist__about__container {
+  display: flex;
+  align-items: center;
+  gap: 220px;
+}
+.benefist__about__title {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 24px;
+  width: 445px;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 48px;
+  letter-spacing: -2.14286px;
+  color: #495567;
+}
+.benefist__about__text {
+  margin: 0;
+  padding: 0;
+  width: 445px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #939caa;
+}
+.benefist__about__img {
+  border-radius: 50%;
+  z-index: -1;
+}
+
+.values__about {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.values__about__title {
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  letter-spacing: -2.14286px;
+  color: #495567;
+}
+.values__about__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.values__about__item {
+  margin-left: auto;
+  margin-right: auto;
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.values__about__img {
+  border-radius: 50%;
+  margin-bottom: 87px;
+}
+.values__about__mini__title {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 27px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: -1.07143px;
+  color: #495567;
+}
+.values__about__mini__title--one::before {
+  content: "01";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: -1.07143px;
+  color: #495567;
+  padding: 33px 34px;
+  background-color: #fcb72b;
+  border-radius: 50%;
+  position: absolute;
+  top: -125px;
+}
+.values__about__mini__title--two::before {
+  content: "02";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: -1.07143px;
+  color: #495567;
+  padding: 33px 34px;
+  background-color: #fcb72b;
+  border-radius: 50%;
+  position: absolute;
+  top: -125px;
+  left: 40px;
+}
+.values__about__mini__title--three::before {
+  content: "03";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+  letter-spacing: -1.07143px;
+  color: #495567;
+  padding: 33px 34px;
+  background-color: #fcb72b;
+  border-radius: 50%;
+  position: absolute;
+  top: -125px;
+  left: 40px;
+}
+.values__about__text {
+  margin: 0;
+  padding: 0;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: #939caa;
+}
+
+.faqs {
+  padding-bottom: 160px;
+}
+.faqs__title {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 64px;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 48px;
+  text-align: center;
+  letter-spacing: -2.14286px;
+  color: #495567;
+}
+.faqs__box {
+  display: flex;
+  gap: 30px;
+}
+.faqs__minibox {
+  margin: 0;
+  padding: 0;
+}
+.faqs__mini__title {
+  margin: 0;
+  padding: 0;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: -1.78571px;
+  color: #495567;
+}
+.faqs__list {
+  position: relative;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 710px;
+  background-color: #f2f5f9;
+  padding: 32px 40px;
+  margin-bottom: 16px;
+}
+.faqs__btn {
+  display: none;
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-image: url(../../img/about_input.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 10;
+}
+.faqs__list--three {
+  margin-bottom: 64px;
+}
+.faqs__list--six {
+  margin: 0;
+}
+.faqs__item {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: -1.07143px;
+  color: #495567;
+}
+.faqs__item--one {
+  margin-top: 24px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #495567;
+}
+.faqs__item--two {
+  display: none;
+  margin-top: 24px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #495567;
+}
+.faqs__item--three {
+  display: none;
+  margin-top: 24px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #495567;
+}
+.faqs__item--four {
+  margin-top: 24px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #495567;
+}
+.faqs__item--fiwe {
+  display: none;
+  margin-top: 24px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #495567;
+}
+.faqs__item--six {
+  display: none;
+  margin-top: 24px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #495567;
 }/*# sourceMappingURL=styles.css.map */
