--- a/scss/_about/_faqs.scss
+++ b/scss/_about/_faqs.scss
@@ -1,9 +1,12 @@
 .faqs {
+  padding-top: 120px;
   padding-bottom: 160px;
 
   &__title {
     margin: 0;
     padding: 0;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 64px;
     font-weight: 700;
     font-size: 48px;
@@ -16,11 +19,17 @@
     display: flex;
     justify-content: space-between;
   }
-  &__minibox {
+  &__box--one {
+    width: 730px;
     margin: 0;
     padding: 0;
   }
-  &__mini__title {
+  &__box--two {
+    width: 730px;
+    margin: 0;
+    padding: 0;
+  }
+  &__box__title {
     margin: 0;
     padding: 0;
     font-weight: 700;
@@ -29,51 +38,39 @@
     letter-spacing: -1.78571px;
     color: #495567;
   }
-  &__list {
+  &__minibox {
     position: relative;
-    @include reset-list;
-    width: 710px;
-    background-color: $snow;
     padding: 32px 40px;
     margin-bottom: 16px;
+    background-color: #f2f5f9;
   }
   &__btn {
-    display: none;
-    position: absolute;
-    background-color: transparent;
+    display: block;
+    width: 20px;
+    height: 20px;
     border: none;
-    width: 30px;
-    height: 30px;
-    background-image: url(../../img/about_input.svg);
+    background-color: transparent;
+    background-image: url(.././img/about_input.svg);
     background-repeat: no-repeat;
     background-position: center;
-    z-index: 10;
+    cursor: pointer;
+    position: absolute;
+    right: 40px;
+    top: 40px;
   }
-  &__list--three {
-    margin-bottom: 64px;
-  }
-  &__list--six {
+  &__minititle {
     margin: 0;
-  }
-  &__item {
+    padding: 0;
     font-weight: 700;
     font-size: 24px;
     line-height: 28px;
     letter-spacing: -1.07143px;
     color: #495567;
   }
-  &__item--one {
-    // display: none;
-    margin-top: 24px;
-    font-family: "Lexend Deca";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 25px;
-    color: #495567;
-  }
-  &__item--two {
+  &__text1 {
     display: none;
+    margin: 0;
+    padding: 0;
     margin-top: 24px;
     font-family: "Lexend Deca";
     font-style: normal;
@@ -82,8 +79,10 @@
     line-height: 25px;
     color: #495567;
   }
-  &__item--three {
+  &__text2 {
     display: none;
+    margin: 0;
+    padding: 0;
     margin-top: 24px;
     font-family: "Lexend Deca";
     font-style: normal;
@@ -92,18 +91,10 @@
     line-height: 25px;
     color: #495567;
   }
-  &__item--four {
-    // display: none;
-    margin-top: 24px;
-    font-family: "Lexend Deca";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 25px;
-    color: #495567;
-  }
-  &__item--fiwe {
+  &__text3 {
     display: none;
+    margin: 0;
+    padding: 0;
     margin-top: 24px;
     font-family: "Lexend Deca";
     font-style: normal;
@@ -112,8 +103,10 @@
     line-height: 25px;
     color: #495567;
   }
-  &__item--six {
+  &__text4 {
     display: none;
+    margin: 0;
+    padding: 0;
     margin-top: 24px;
     font-family: "Lexend Deca";
     font-style: normal;
@@ -121,5 +114,35 @@
     font-size: 15px;
     line-height: 25px;
     color: #495567;
+  }
+  &__text5 {
+    display: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 24px;
+    font-family: "Lexend Deca";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: #495567;
+  }
+  &__text6 {
+    display: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 24px;
+    font-family: "Lexend Deca";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: #495567;
+  }
+  &__text {
+    display: block;
+  }
+  &__open__btn {
+    background-image: url(.././img/about_input_activ.svg);
   }
 }
