--- a/css/styles.css
+++ b/css/styles.css
@@ -1483,11 +1483,14 @@ a {
 }
 
 .faqs {
+  padding-top: 120px;
   padding-bottom: 160px;
 }
 .faqs__title {
   margin: 0;
   padding: 0;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 64px;
   font-weight: 700;
   font-size: 48px;
@@ -1500,11 +1503,17 @@ a {
   display: flex;
   justify-content: space-between;
 }
-.faqs__minibox {
+.faqs__box--one {
+  width: 730px;
   margin: 0;
   padding: 0;
 }
-.faqs__mini__title {
+.faqs__box--two {
+  width: 730px;
+  margin: 0;
+  padding: 0;
+}
+.faqs__box__title {
   margin: 0;
   padding: 0;
   font-weight: 700;
@@ -1513,52 +1522,39 @@ a {
   letter-spacing: -1.78571px;
   color: #495567;
 }
-.faqs__list {
+.faqs__minibox {
   position: relative;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  width: 710px;
-  background-color: #f2f5f9;
   padding: 32px 40px;
   margin-bottom: 16px;
+  background-color: #f2f5f9;
 }
 .faqs__btn {
-  display: none;
-  position: absolute;
-  background-color: transparent;
+  display: block;
+  width: 20px;
+  height: 20px;
   border: none;
-  width: 30px;
-  height: 30px;
-  background-image: url(../../img/about_input.svg);
+  background-color: transparent;
+  background-image: url(.././img/about_input.svg);
   background-repeat: no-repeat;
   background-position: center;
-  z-index: 10;
+  cursor: pointer;
+  position: absolute;
+  right: 40px;
+  top: 40px;
 }
-.faqs__list--three {
-  margin-bottom: 64px;
-}
-.faqs__list--six {
+.faqs__minititle {
   margin: 0;
-}
-.faqs__item {
+  padding: 0;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
   letter-spacing: -1.07143px;
   color: #495567;
 }
-.faqs__item--one {
-  margin-top: 24px;
-  font-family: "Lexend Deca";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 25px;
-  color: #495567;
-}
-.faqs__item--two {
+.faqs__text1 {
   display: none;
+  margin: 0;
+  padding: 0;
   margin-top: 24px;
   font-family: "Lexend Deca";
   font-style: normal;
@@ -1567,8 +1563,10 @@ a {
   line-height: 25px;
   color: #495567;
 }
-.faqs__item--three {
+.faqs__text2 {
   display: none;
+  margin: 0;
+  padding: 0;
   margin-top: 24px;
   font-family: "Lexend Deca";
   font-style: normal;
@@ -1577,17 +1575,10 @@ a {
   line-height: 25px;
   color: #495567;
 }
-.faqs__item--four {
-  margin-top: 24px;
-  font-family: "Lexend Deca";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 25px;
-  color: #495567;
-}
-.faqs__item--fiwe {
+.faqs__text3 {
   display: none;
+  margin: 0;
+  padding: 0;
   margin-top: 24px;
   font-family: "Lexend Deca";
   font-style: normal;
@@ -1596,8 +1587,10 @@ a {
   line-height: 25px;
   color: #495567;
 }
-.faqs__item--six {
+.faqs__text4 {
   display: none;
+  margin: 0;
+  padding: 0;
   margin-top: 24px;
   font-family: "Lexend Deca";
   font-style: normal;
@@ -1605,4 +1598,34 @@ a {
   font-size: 15px;
   line-height: 25px;
   color: #495567;
+}
+.faqs__text5 {
+  display: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 24px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #495567;
+}
+.faqs__text6 {
+  display: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 24px;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #495567;
+}
+.faqs__text {
+  display: block;
+}
+.faqs__open__btn {
+  background-image: url(.././img/about_input_activ.svg);
 }/*# sourceMappingURL=styles.css.map */
