--- a/scss/_about/_benefist_about.scss
+++ b/scss/_about/_benefist_about.scss
@@ -24,7 +24,7 @@
   &__container {
     display: flex;
     align-items: center;
-    gap: 220px;
+    justify-content: space-between;
   }
   &__title {
     margin: 0;
@@ -51,5 +51,138 @@
   &__img {
     border-radius: 50%;
     z-index: -1;
+  }
+}
+@media only screen and (max-width: 1350px) {
+  .benefist__about {
+    &__box {
+      background-position: calc(50% + 400px) bottom;
+    }
+    &__box--two {
+      background-position: calc(50% + 800px) center;
+    }
+    &__box--three {
+      background-position: calc(50% - 700px) top;
+    }
+    &__box--four {
+      background-position: calc(50% - 800px) center;
+    }
+  }
+}
+@media only screen and (max-width: 1250px) {
+  .benefist__about {
+    &__container {
+      padding-left: 80px;
+      padding-right: 80px;
+    }
+  }
+}
+@media only screen and (max-width: 1190px) {
+  .benefist__about {
+    &__box--two {
+      background-position: calc(50% + 750px) center;
+    }
+    &__box--three {
+      background-position: calc(50% - 700px) top;
+    }
+    &__box--four {
+      background-position: calc(50% - 750px) center;
+    }
+  }
+}
+@media only screen and (max-width: 1100px) {
+  .benefist__about {
+    &__container {
+      flex-direction: column;
+    }
+    &__container:nth-child(odd) &__img {
+      order: -1;
+    }
+    &__img {
+      margin-bottom: 56px;
+    }
+    &__title {
+      text-align: center;
+    }
+    &__text {
+      text-align: center;
+    }
+    &__box {
+      background-position: calc(50%) center;
+      margin-bottom: 120px;
+    }
+    &__box--two {
+      background-position: calc(50% + 600px) top;
+    }
+    &__box--three {
+      background-position: calc(50% - 400px) top;
+    }
+    &__box--four {
+      background-position: calc(50% - 600px) top;
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  .benefist__about {
+    &__container {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+    &__box--two {
+      background-position: calc(50% + 500px) top;
+    }
+    &__box--four {
+      background-position: calc(50% - 500px) top;
+    }
+  }
+}
+@media only screen and (max-width: 740px) {
+  .benefist__about {
+    &__box {
+      background-position: calc(50% + 50px) center;
+    }
+  }
+}
+@media only screen and (max-width: 670px) {
+  .benefist__about {
+    &__box {
+      background-position: calc(50% + 100px) center;
+    }
+  }
+}
+@media only screen and (max-width: 560px) {
+  .benefist__about {
+    &__box {
+      background-position: calc(50% + 150px) center;
+    }
+  }
+}
+@media only screen and (max-width: 470px) {
+  .benefist__about {
+    &__box {
+      background-position: calc(50% + 200px) center;
+    }
+    &__title {
+      font-size: 40px;
+      line-height: 40px;
+      width: 400px;
+    }
+    &__text {
+      font-size: 10px;
+      line-height: 20px;
+      width: 400px;
+    }
+  }
+}
+@media only screen and (max-width: 425px) {
+  .benefist__about {
+    &__title {
+      width: 311px;
+      font-size: 32px;
+      line-height: 32px;
+    }
+    &__text {
+      width: 311px;
+    }
   }
 }
