--- a/scss/_about/_values_about.scss
+++ b/scss/_about/_values_about.scss
@@ -102,3 +102,73 @@
     color: #939caa;
   }
 }
+@media only screen and (max-width: 1200px) {
+  .values__about {
+    &__container {
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .values__about {
+    &__container {
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+  }
+}
+@media only screen and (max-width: 950px) {
+  .values__about {
+    &__list {
+      flex-direction: column;
+    }
+    &__item {
+      width: 600px;
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  .values__about {
+    &__item {
+      width: 457px;
+    }
+  }
+}
+@media only screen and (max-width: 530px) {
+  .values__about {
+    &__item {
+      width: 400px;
+    }
+  }
+}
+@media only screen and (max-width: 480px) {
+  .values__about {
+    &__item {
+      width: 350px;
+    }
+  }
+}
+@media only screen and (max-width: 425px) {
+  .values__about {
+    &__container {
+      padding-left: 32px;
+      padding-right: 32px;
+    }
+    &__title {
+      font-size: 32px;
+      line-height: 32px;
+    }
+    &__item {
+      width: 311px;
+    }
+    &__mini__title {
+      font-size: 24px;
+      line-height: 28px;
+    }
+    &__text {
+      font-size: 15px;
+      line-height: 25px;
+    }
+  }
+}
